Projetos/ACBrFramework/jACBrFramework/ACBrFramework_JNI/include/ACBrAAC.h

#define ACBr

typedef void* INTPTR;

typedef char* PCHAR;


// Tipos de dados

typedef struct
{
	double ValorGT;
	char NumeroSerie[30];
	int CRO;
	int CNI;
	double DtHrAtualizado;
} TECFAutorizado;



// Funções

DllImport int AAC_AbrirArquivo(const INTPTR aacHandle);

DllImport int AAC_AtualizarValorGT(const INTPTR aacHandle, const PCHAR numSerie, double* grandTotal);

DllImport int AAC_Create(INTPTR* aacHandle);

DllImport int AAC_Destroy(INTPTR* aacHandle);

DllImport int AAC_GetArqLOG(const INTPTR aacHandle, PCHAR buffer, const int bufferLen);

DllImport int AAC_GetChave(const INTPTR aacHandle, PCHAR buffer, const int bufferLen);

DllImport int AAC_GetNomeArquivoAux(const INTPTR aacHandle, PCHAR buffer, const int bufferLen);

DllImport int AAC_GetParams(const INTPTR aacHandle, PCHAR buffer, const int bufferLen);

DllImport int AAC_GetUltimoErro(const INTPTR aacHandle, PCHAR buffer, const int bufferLen);

DllImport int AAC_IdentPaf_ECFsAutorizados_Clear(const INTPTR aacHandle);

DllImport int AAC_IdentPaf_ECFsAutorizados_Get(const INTPTR aacHandle, TECFAutorizado* retAutorizado, const int index);

DllImport int AAC_SalvarArquivo(const INTPTR aacHandle);

DllImport int AAC_SetArqLOG(const INTPTR aacHandle, const PCHAR caminho);

DllImport int AAC_SetChave(const INTPTR aacHandle, const PCHAR chave);

DllImport int AAC_SetNomeArquivoAux(const INTPTR aacHandle, const PCHAR caminho);

DllImport int AAC_SetParams(const INTPTR aacHandle, const PCHAR parametros);

DllImport int AAC_VerificarGTECF(const INTPTR aacHandle, const PCHAR numSerie, double* grandTotal);