Projetos/ACBr32_DLL/ACBr32/ACBrAACDll.pas

unit ACBrAACDLL;

interface

uses
  SysUtils,
  Classes,
  ACBrPAFClass,
  ACBrAAC,
  ACBrUtil;

{Classe para armazenar EventHandlers do componente }
type TEventHandlers = class
     ChaveCriptografia : String;
     procedure OnGetChave(var Chave: AnsiString);
end;

{Handle para o componente TACBrAAC}
type TAACHandle = record
  UltimoErro : String;
  AAC : TACBrAAC;
  EventHandlers : TEventHandlers;
end;

{Ponteiro para o Handle }
type PAACHandle = ^TAACHandle;

{Records estilo C utilizados nos retornos das funções}

type TECFAutorizado = record
     ValorGT : double;
     Serie :  array[0..30] of char;
     CNI : integer;
     CRO : integer;
     DtHrAtualizado : double;
end;

implementation

procedure TEventHandlers.OnGetChave(var Chave: AnsiString);
begin
   Chave :=  ChaveCriptografia;
end;

{
PADRONIZAÇÃO DAS FUNÇÕES:

        PARÂMETROS:
        Todas as funções recebem o parâmetro "handle" que é o ponteiro
        para o componente instanciado; Este ponteiro deve ser armazenado
        pela aplicação que utiliza a DLL;

        RETORNO:
        Todas as funções da biblioteca retornam um Integer com as possíveis Respostas:

                MAIOR OU IGUAL A ZERO: SUCESSO
                Outos retornos maior que zero indicam sucesso, com valor específico de cada função.

                MENOR QUE ZERO: ERROS

                  -1 : Erro ao executar;
                       Vide UltimoErro

                  -2 : ACBr não inicializado.

                  Outros retornos negativos indicam erro específico de cada função;

                  A função "UltimoErro" retornará a mensagem da última exception disparada pelo componente.
}


{
CRIA um novo componente TACBrAAC retornando o ponteiro para o objeto criado.
Este ponteiro deve ser armazenado pela aplicação que utiliza a DLL e informado
em todas as chamadas de função relativas ao TACBrAAC
}
Function AAC_Create(var aacHandle: PAACHandle): Integer; {$IFDEF STDCALL} stdcall; {$ENDIF} {$IFDEF CDECL} cdecl; {$ENDIF}  export;
begin

  try
     New(aacHandle);
     aacHandle^.AAC := TACBrAAC.Create(nil);
     aacHandle^.EventHandlers := TEventHandlers.Create();
     aacHandle^.UltimoErro := '';
     aacHandle^.AAC.OnGetChave := aacHandle^.EventHandlers.OnGetChave;
     Result := 0;
  except
     on exception : Exception do
     begin
        Result := -1;
        aacHandle^.UltimoErro := exception.Message;
     end
  end;

end;

{
DESTRÓI o objeto TACBrAAC e libera a memória utilizada.
Esta função deve SEMPRE ser chamada pela aplicação que utiliza a DLL
quando o componente não mais for utilizado.
}
Function AAC_Destroy(var aacHandle: PAACHandle): Integer; {$IFDEF STDCALL} stdcall; {$ENDIF} {$IFDEF CDECL} cdecl; {$ENDIF}  export;
begin

  if (aacHandle = nil) then
  begin
     Result := -2;
     Exit;
  end;

  try

    aacHandle^.AAC.Destroy;
    aacHandle^.AAC := nil;

    Dispose(aacHandle);
    aacHandle := nil;
    Result := 0;

  except
     on exception : Exception do
     begin
        Result := -1;
        aacHandle^.UltimoErro := exception.Message;
     end
  end;

end;

Function AAC_GetUltimoErro(const aacHandle: PAACHandle; Buffer : pChar; const BufferLen : Integer) : Integer ; {$IFDEF STDCALL} stdcall; {$ENDIF} {$IFDEF CDECL} cdecl; {$ENDIF} export;
begin

  try
     StrPLCopy(Buffer, aacHandle^.UltimoErro, BufferLen);
     Result := length(aacHandle^.UltimoErro);
  except
     on exception : Exception do
     begin
        aacHandle^.UltimoErro := exception.Message;
        Result := -1;
     end
  end;
end;

/////////////////////////////////FUNÇÕES E PROPRIEDADES DO AAC///////////////////////////////////////////////////////

Function AAC_GetArqLOG(const aacHandle: PAACHandle; Buffer : pChar; const BufferLen : Integer) : Integer ; {$IFDEF STDCALL} stdcall; {$ENDIF} {$IFDEF CDECL} cdecl; {$ENDIF} export;
var
  StrTmp : String;
begin

  if (aacHandle = nil) then
  begin
     Result := -2;
     Exit;
  end;

 try
     StrTmp := aacHandle^.AAC.ArqLOG;
     StrPLCopy(Buffer, StrTmp, BufferLen);
     Result := length(StrTmp);
  except
     on exception : Exception do
     begin
        aacHandle^.UltimoErro := exception.Message;
        Result := -1;
     end
  end;

end;

Function AAC_SetArqLOG(const aacHandle: PAACHandle; const ArqLOG : pChar) : Integer; {$IFDEF STDCALL} stdcall; {$ENDIF} {$IFDEF CDECL} cdecl; {$ENDIF}  export;
begin

  if (aacHandle = nil) then
  begin
     Result := -2;
     Exit;
  end;

  try
     aacHandle^.AAC.ArqLOG := ArqLOG;
     Result := 0;
  except
     on exception : Exception do
     begin
        aacHandle^.UltimoErro := exception.Message;
        Result := -1;
     end
  end;

end;

Function AAC_GetNomeArquivoAux(const aacHandle: PAACHandle; Buffer : pChar; const BufferLen : Integer) : Integer ; {$IFDEF STDCALL} stdcall; {$ENDIF} {$IFDEF CDECL} cdecl; {$ENDIF} export;
var
  StrTmp : String;
begin

  if (aacHandle = nil) then
  begin
     Result := -2;
     Exit;
  end;

 try
     StrTmp := aacHandle^.AAC.NomeArquivoAux;
     StrPLCopy(Buffer, StrTmp, BufferLen);
     Result := length(StrTmp);
  except
     on exception : Exception do
     begin
        aacHandle^.UltimoErro := exception.Message;
        Result := -1;
     end
  end;

end;

Function AAC_SetNomeArquivoAux(const aacHandle: PAACHandle; const NomeArquivoAux : pChar) : Integer; {$IFDEF STDCALL} stdcall; {$ENDIF} {$IFDEF CDECL} cdecl; {$ENDIF}  export;
begin

  if (aacHandle = nil) then
  begin
     Result := -2;
     Exit;
  end;

  try
     aacHandle^.AAC.NomeArquivoAux := NomeArquivoAux;
     Result := 0;
  except
     on exception : Exception do
     begin
        aacHandle^.UltimoErro := exception.Message;
        Result := -1;
     end
  end;

end;

Function AAC_GetParams(const aacHandle: PAACHandle; Buffer : pChar; const BufferLen : Integer) : Integer ; {$IFDEF STDCALL} stdcall; {$ENDIF} {$IFDEF CDECL} cdecl; {$ENDIF} export;
var
  StrTmp : String;
begin

  if (aacHandle = nil) then
  begin
     Result := -2;
     Exit;
  end;

 try
     StrTmp := aacHandle^.AAC.Params.Text;
     StrPLCopy(Buffer, StrTmp, BufferLen);
     Result := length(StrTmp);
  except
     on exception : Exception do
     begin
        aacHandle^.UltimoErro := exception.Message;
        Result := -1;
     end
  end;

end;

Function AAC_SetParams(const aacHandle: PAACHandle; const Params : pChar) : Integer; {$IFDEF STDCALL} stdcall; {$ENDIF} {$IFDEF CDECL} cdecl; {$ENDIF}  export;
begin

  if (aacHandle = nil) then
  begin
     Result := -2;
     Exit;
  end;

  try
     aacHandle^.AAC.Params.Text := Params;
     Result := 0;
  except
     on exception : Exception do
     begin
        aacHandle^.UltimoErro := exception.Message;
        Result := -1;
     end
  end;

end;

Function AAC_GetChave(const aacHandle: PAACHandle; Buffer : pChar; const BufferLen : Integer) : Integer ; {$IFDEF STDCALL} stdcall; {$ENDIF} {$IFDEF CDECL} cdecl; {$ENDIF} export;
var
  StrTmp : String;
begin

 try
     StrTmp := aacHandle^.EventHandlers.ChaveCriptografia;
     StrPLCopy(Buffer, StrTmp, BufferLen);
     Result := length(StrTmp);
  except
     on exception : Exception do
     begin
        aacHandle^.UltimoErro := exception.Message;
        Result := -1;
     end
  end;

end;

Function AAC_SetChave(const aacHandle: PAACHandle; const Chave : pChar) : Integer; {$IFDEF STDCALL} stdcall; {$ENDIF} {$IFDEF CDECL} cdecl; {$ENDIF}  export;
begin

  try
     aacHandle^.EventHandlers.ChaveCriptografia := Chave;
     Result := 0;
  except
     on exception : Exception do
     begin
        aacHandle^.UltimoErro := exception.Message;
        Result := -1;
     end
  end;

end;

Function AAC_AbrirArquivo(const aacHandle: PAACHandle) : Integer; {$IFDEF STDCALL} stdcall; {$ENDIF} {$IFDEF CDECL} cdecl; {$ENDIF}  export;
begin

  if (aacHandle = nil) then
  begin
     Result := -2;
     Exit;
  end;

  try
     aacHandle^.AAC.AbrirArquivo;
     Result := 0;
  except
     on exception : Exception do
     begin
        aacHandle^.UltimoErro := exception.Message;
        Result := -1;
     end
  end;

end;

Function AAC_SalvarArquivo(const aacHandle: PAACHandle) : Integer; {$IFDEF STDCALL} stdcall; {$ENDIF} {$IFDEF CDECL} cdecl; {$ENDIF}  export;
begin

  if (aacHandle = nil) then
  begin
     Result := -2;
     Exit;
  end;
  try
     aacHandle^.AAC.SalvarArquivo;
     Result := 0;
  except
     on exception : Exception do
     begin
        aacHandle^.UltimoErro := exception.Message;
        Result := -1;
     end
  end;

end;

Function AAC_VerificarGTECF(const aacHandle: PAACHandle; const NumSerie : pChar; var GrandeTotal : Double) : Integer; {$IFDEF STDCALL} stdcall; {$ENDIF} {$IFDEF CDECL} cdecl; {$ENDIF}  export;
begin

  if (aacHandle = nil) then
  begin
     Result := -2;
     Exit;
  end;
  try
     Result := aacHandle^.AAC.VerificarGTECF(NumSerie, GrandeTotal);

     //Os retornos do método VerificarGTECF são números negativos
     //Para o ACBrDLL os retornos precisam ser positivos, caso contrário serão exceptions
     // Retornos:
     //   0 = Tudo OK
     //  -1 = NumSerie não encontrado
     //  -2 = GT não confere
     Result := Result * -1;
  except
     on exception : Exception do
     begin
        aacHandle^.UltimoErro := exception.Message;
        Result := -1;
     end
  end;

end;

Function AAC_AtualizarValorGT(const aacHandle: PAACHandle; const NumSerie : pChar; var GrandeTotal : Double) : Integer; {$IFDEF STDCALL} stdcall; {$ENDIF} {$IFDEF CDECL} cdecl; {$ENDIF}  export;
begin

  if (aacHandle = nil) then
  begin
     Result := -2;
     Exit;
  end;
  try
     aacHandle^.AAC.AtualizarValorGT(NumSerie, GrandeTotal);
     Result := 0;
  except
     on exception : Exception do
     begin
        aacHandle^.UltimoErro := exception.Message;
        Result := -1;
     end
  end;

end;

// Dados de ECF autorizados

Function AAC_IdentPaf_ECFsAutorizados_Clear(const aacHandle: PAACHandle) : Integer; {$IFDEF STDCALL} stdcall; {$ENDIF} {$IFDEF CDECL} cdecl; {$ENDIF}  export;
begin

  if (aacHandle = nil) then
  begin
     Result := -2;
     Exit;
  end;

  try
     aacHandle^.AAC.IdentPAF.ECFsAutorizados.Clear;
     Result := 0;
  except
     on exception : Exception do
     begin
        aacHandle^.UltimoErro := exception.Message;
        Result := -1;
     end
  end;

end;

Function AAC_IdentPaf_ECFsAutorizados_Get(const aacHandle: PAACHandle; var retEcfAutorizado : TEcfAutorizado; const index : Integer) : Integer; {$IFDEF STDCALL} stdcall; {$ENDIF} {$IFDEF CDECL} cdecl; {$ENDIF}  export;
var
  ecfAutorizado : TACBrAACECF;
begin
  if (aacHandle = nil) then
  begin
     Result := -2;
     Exit;
  end;

   try
      if (index >= 0) and (index < aacHandle^.AAC.IdentPAF.ECFsAutorizados.Count) then
         begin

              ecfAutorizado := aacHandle^.AAC.IdentPAF.ECFsAutorizados[index];
              retEcfAutorizado.CNI := ecfAutorizado.CNI;
              retEcfAutorizado.CRO := ecfAutorizado.CRO;
              retEcfAutorizado.ValorGT := ecfAutorizado.ValorGT;
              retEcfAutorizado.Serie := pChar(ecfAutorizado.NumeroSerie);
              Result := 0;
      end
      else
      begin
              Result := -3;
      end;

   except
     on exception : Exception do
     begin
        aacHandle^.UltimoErro := exception.Message;
        Result := -1;
     end
   end;
end;
